--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
 
 /* Hero Section */
 .hero {
-  background-image: url("./public/BG.jpg");
+  background-image: url("/BG.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
